# V-Shell

./: .env.example  .gitignore  AGENTS.md  CODE_REVIEW.md  CODE_REVIEW_REPORT.md  Makefile  README.md  ROADMAP.md  metrics.jsonl  pyproject.toml  requirements.txt  spec.md  tasks.py  verify_extensions.py
app/: __init__.py  config.py  main.py
app/audio/: feedback.py  recorder.py  stt.py
app/cli/: ui.py
app/core/: executor.py  metrics.py  models.py  policies.py  retry.py  voice_flow.py
app/core/tools/docker/: containers.py
app/core/tools/git/: commit_push.py  diff.py  pull.py  test_runner.py
app/core/tools/git_ops/: add.py  branch.py  commit_push.py  diff.py  fetch.py  log.py  merge.py  pull.py  remote.py  reset.py  revert.py  stash.py  status.py  test_runner.py  utils.py
app/core/tools/system/: shell.py
app/intent/: __init__.py  setfit_router.py
app/llm/: commit_message.py  router.py
app/mcp/: server.py  tools.py
tests/: test_executor.py  test_executor_voice.py  test_git_ops.py  test_integration_git.py  test_mcp.py  test_router.py  test_smart_commit.py  test_smart_reset.py  test_voice_flow.py
